@@ -22,6 +22,8 @@ Version 0.3
 - adde `BadRequest.wrap`.
 - added ETag-support to the SharedDataMiddleware and added an option
   to disable caching.
+- fixed `is_xhr` on the request objects.
+- fixed error handling of the url adapter's `dispatch` method. (#318)
 
 
 Version 0.2
@@ -30,7 +32,7 @@ Version 0.2
 
 - Added `AnyConverter` to the routing system.
 - Added `werkzeug.contrib.securecookie`
-- Exceptions have a ``get_response()`` method that return a resposne object
+- Exceptions have a ``get_response()`` method that return a response object
 - fixed the path ordering bug (#293), thanks Thomas Johansson
 - `BaseReporterStream` is now part of the werkzeug contrib module.  With
   Werkzeug 0.3 onwards you will have to import it from there.
